pkgs/dartcv_core/src/core.h

CvStatus *Mat_GetUChar(Mat m, int row, int col, uint8_t *rval);
CvStatus *Mat_GetUChar3(Mat m, int x, int y, int z, uint8_t *rval);
CvStatus *Mat_GetSChar(Mat m, int row, int col, int8_t *rval);
CvStatus *Mat_GetSChar3(Mat m, int x, int y, int z, int8_t *rval);
CvStatus *Mat_GetUShort(Mat m, int row, int col, uint16_t *rval);
CvStatus *Mat_GetUShort3(Mat m, int x, int y, int z, uint16_t *rval);
CvStatus *Mat_GetShort(Mat m, int row, int col, int16_t *rval);
CvStatus *Mat_GetShort3(Mat m, int x, int y, int z, int16_t *rval);
CvStatus *Mat_GetInt3(Mat m, int x, int y, int z, int32_t *rval);
Vec2b *Mat_GetVec2b(Mat m, int row, int col);
Vec3b *Mat_GetVec3b(Mat m, int row, int col);
Vec4b *Mat_GetVec4b(Mat m, int row, int col);
Vec2s *Mat_GetVec2s(Mat m, int row, int col);
Vec3s *Mat_GetVec3s(Mat m, int row, int col);
Vec2w *Mat_GetVec2w(Mat m, int row, int col);
Vec3w *Mat_GetVec3w(Mat m, int row, int col);
Vec2i *Mat_GetVec2i(Mat m, int row, int col);
Vec3i *Mat_GetVec3i(Mat m, int row, int col);
Vec2f *Mat_GetVec2f(Mat m, int row, int col);
Vec3f *Mat_GetVec3f(Mat m, int row, int col);
Vec4f *Mat_GetVec4f(Mat m, int row, int col);
Vec2d *Mat_GetVec2d(Mat m, int row, int col);
Vec3d *Mat_GetVec3d(Mat m, int row, int col);
Vec4d *Mat_GetVec4d(Mat m, int row, int col);
CvStatus *Mat_GetOptimalDFTSize(int vecsize, int *rval);