pkgs/dartcv_core/lib/src/g/core.g.dart


  ffi.Pointer<CvStatus> Mat_GetInt3(
    Mat m,
    int x,
    int y,
    int z,
    ffi.Pointer<ffi.Int32> rval,
  ) {
    return _Mat_GetInt3(
      m,
      x,
      y,
      z,
      rval,
    );
  }

  late final _Mat_GetInt3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Int32>)>>('Mat_GetInt3');
  late final _Mat_GetInt3 = _Mat_GetInt3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, ffi.Pointer<ffi.Int32>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetOptimalDFTSize(
    int vecsize,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _Mat_GetOptimalDFTSize(
      vecsize,
      rval,
    );
  }

  late final _Mat_GetOptimalDFTSizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Int, ffi.Pointer<ffi.Int>)>>('Mat_GetOptimalDFTSize');
  late final _Mat_GetOptimalDFTSize = _Mat_GetOptimalDFTSizePtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, ffi.Pointer<ffi.Int>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetSChar(
    Mat m,
    int row,
    int col,
    ffi.Pointer<ffi.Int8> rval,
  ) {
    return _Mat_GetSChar(
      m,
      row,
      col,
      rval,
    );
  }

  late final _Mat_GetSCharPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int8>)>>('Mat_GetSChar');
  late final _Mat_GetSChar = _Mat_GetSCharPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, ffi.Pointer<ffi.Int8>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetSChar3(
    Mat m,
    int x,
    int y,
    int z,
    ffi.Pointer<ffi.Int8> rval,
  ) {
    return _Mat_GetSChar3(
      m,
      x,
      y,
      z,
      rval,
    );
  }

  late final _Mat_GetSChar3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Int8>)>>('Mat_GetSChar3');
  late final _Mat_GetSChar3 = _Mat_GetSChar3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, ffi.Pointer<ffi.Int8>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetShort(
    Mat m,
    int row,
    int col,
    ffi.Pointer<ffi.Int16> rval,
  ) {
    return _Mat_GetShort(
      m,
      row,
      col,
      rval,
    );
  }

  late final _Mat_GetShortPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Int16>)>>('Mat_GetShort');
  late final _Mat_GetShort = _Mat_GetShortPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, ffi.Pointer<ffi.Int16>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetShort3(
    Mat m,
    int x,
    int y,
    int z,
    ffi.Pointer<ffi.Int16> rval,
  ) {
    return _Mat_GetShort3(
      m,
      x,
      y,
      z,
      rval,
    );
  }

  late final _Mat_GetShort3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Int16>)>>('Mat_GetShort3');
  late final _Mat_GetShort3 = _Mat_GetShort3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, ffi.Pointer<ffi.Int16>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetUChar(
    Mat m,
    int row,
    int col,
    ffi.Pointer<ffi.Uint8> rval,
  ) {
    return _Mat_GetUChar(
      m,
      row,
      col,
      rval,
    );
  }

  late final _Mat_GetUCharPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, ffi.Int, ffi.Pointer<ffi.Uint8>)>>('Mat_GetUChar');
  late final _Mat_GetUChar = _Mat_GetUCharPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, ffi.Pointer<ffi.Uint8>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetUChar3(
    Mat m,
    int x,
    int y,
    int z,
    ffi.Pointer<ffi.Uint8> rval,
  ) {
    return _Mat_GetUChar3(
      m,
      x,
      y,
      z,
      rval,
    );
  }

  late final _Mat_GetUChar3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Uint8>)>>('Mat_GetUChar3');
  late final _Mat_GetUChar3 = _Mat_GetUChar3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, ffi.Pointer<ffi.Uint8>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetUShort(
    Mat m,
    int row,
    int col,
    ffi.Pointer<ffi.Uint16> rval,
  ) {
    return _Mat_GetUShort(
      m,
      row,
      col,
      rval,
    );
  }

  late final _Mat_GetUShortPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Uint16>)>>('Mat_GetUShort');
  late final _Mat_GetUShort = _Mat_GetUShortPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, ffi.Pointer<ffi.Uint16>)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_GetUShort3(
    Mat m,
    int x,
    int y,
    int z,
    ffi.Pointer<ffi.Uint16> rval,
  ) {
    return _Mat_GetUShort3(
      m,
      x,
      y,
      z,
      rval,
    );
  }

  late final _Mat_GetUShort3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Uint16>)>>('Mat_GetUShort3');
  late final _Mat_GetUShort3 = _Mat_GetUShort3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, ffi.Pointer<ffi.Uint16>)>(isLeaf: true);

  ffi.Pointer<Vec2b> Mat_GetVec2b(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec2b(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec2bPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec2b> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec2b');
  late final _Mat_GetVec2b =
      _Mat_GetVec2bPtr.asFunction<ffi.Pointer<Vec2b> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec2d> Mat_GetVec2d(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec2d(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec2dPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec2d> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec2d');
  late final _Mat_GetVec2d =
      _Mat_GetVec2dPtr.asFunction<ffi.Pointer<Vec2d> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec2f> Mat_GetVec2f(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec2f(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec2fPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec2f> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec2f');
  late final _Mat_GetVec2f =
      _Mat_GetVec2fPtr.asFunction<ffi.Pointer<Vec2f> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec2i> Mat_GetVec2i(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec2i(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec2iPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec2i> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec2i');
  late final _Mat_GetVec2i =
      _Mat_GetVec2iPtr.asFunction<ffi.Pointer<Vec2i> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec2s> Mat_GetVec2s(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec2s(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec2sPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec2s> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec2s');
  late final _Mat_GetVec2s =
      _Mat_GetVec2sPtr.asFunction<ffi.Pointer<Vec2s> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec2w> Mat_GetVec2w(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec2w(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec2wPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec2w> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec2w');
  late final _Mat_GetVec2w =
      _Mat_GetVec2wPtr.asFunction<ffi.Pointer<Vec2w> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec3b> Mat_GetVec3b(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec3b(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec3bPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec3b> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec3b');
  late final _Mat_GetVec3b =
      _Mat_GetVec3bPtr.asFunction<ffi.Pointer<Vec3b> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec3d> Mat_GetVec3d(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec3d(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec3dPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec3d> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec3d');
  late final _Mat_GetVec3d =
      _Mat_GetVec3dPtr.asFunction<ffi.Pointer<Vec3d> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec3f> Mat_GetVec3f(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec3f(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec3fPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec3f> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec3f');
  late final _Mat_GetVec3f =
      _Mat_GetVec3fPtr.asFunction<ffi.Pointer<Vec3f> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec3i> Mat_GetVec3i(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec3i(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec3iPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec3i> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec3i');
  late final _Mat_GetVec3i =
      _Mat_GetVec3iPtr.asFunction<ffi.Pointer<Vec3i> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec3s> Mat_GetVec3s(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec3s(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec3sPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec3s> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec3s');
  late final _Mat_GetVec3s =
      _Mat_GetVec3sPtr.asFunction<ffi.Pointer<Vec3s> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec3w> Mat_GetVec3w(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec3w(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec3wPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec3w> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec3w');
  late final _Mat_GetVec3w =
      _Mat_GetVec3wPtr.asFunction<ffi.Pointer<Vec3w> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec4b> Mat_GetVec4b(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec4b(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec4bPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec4b> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec4b');
  late final _Mat_GetVec4b =
      _Mat_GetVec4bPtr.asFunction<ffi.Pointer<Vec4b> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec4d> Mat_GetVec4d(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec4d(
      m,
      row,
      col,
    );
  }

  late final _Mat_GetVec4dPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Vec4d> Function(Mat, ffi.Int, ffi.Int)>>('Mat_GetVec4d');
  late final _Mat_GetVec4d =
      _Mat_GetVec4dPtr.asFunction<ffi.Pointer<Vec4d> Function(Mat, int, int)>(
          isLeaf: true);

  ffi.Pointer<Vec4f> Mat_GetVec4f(
    Mat m,
    int row,
    int col,
  ) {
    return _Mat_GetVec4f(
      m,
      row,
      col,
    );
  }
